# ml-cpu-bench

./: .gitignore  CLAUDE.md  PLAN.md  README.md  SPEC.md  benchmark.py  pyproject.toml  requirements.txt
baselines/: reference.json
benchmarks/: benchmarks.py  system.py
cpubench/: __init__.py  __main__.py  affinity.py  cli.py  controller.py  datasets.py  environment.py  memory.py  registry.py  reporting.py  runner.py  scoring.py  threading_ctl.py  worker.py
cpubench/tasks/: __init__.py  clustering.py  data_prep.py  factorization.py  linalg.py  models.py  sparse.py
tests/: helpers.py  test_harness.py  test_registry.py  test_reporting.py  test_scoring.py  test_smoke_tasks.py
