[project]
name = "ml-cpu-bench"
version = "1.1.0"
description = "Reproducible CPU benchmark for classical ML + data-science workloads."
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "polars",
    "lightgbm",
    "statsforecast",
    "threadpoolctl",
    "psutil",
    "rich",
]

[project.scripts]
cpubench = "cpubench.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cpubench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
